<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/log_length_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <EditText
                android:id="@+id/log_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_length_label"
                android:importantForAutofill="no"
                android:hint="@string/enter_length_in_metres"
                android:background="@drawable/edit_text_background"
                android:layout_marginHorizontal="1dp"
                android:inputType="numberDecimal"
                android:maxLength="2"/>

            <TextView
                android:id="@+id/log_diameter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diameter"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_length"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/log_diameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_diameter_label"
                android:importantForAutofill="no"

                android:hint="@string/enter_diameter_in_centimetres"
                android:background="@drawable/edit_text_background"
                android:layout_marginHorizontal="1dp"
                android:inputType="numberDecimal"
                android:maxLength="2"/>

            <TextView
                android:id="@+id/log_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type of the log:"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_diameter"
                android:layout_marginTop="20dp"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_group_log_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@+id/radio_spruce"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_type_label">
                <RadioButton android:id="@+id/radio_spruce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spruce_radio"/>
                <RadioButton android:id="@+id/radio_beech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beech_radio"/>
                <RadioButton android:id="@+id/radio_fir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fir_radio"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_new_log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_log_type"
                android:layout_marginTop="20dp"
                android:text="@string/add_log"
                android:backgroundTint="#6a5127"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                android:stateListAnimator="@null"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="back"
                android:textColor="#656565"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_new_log_button"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/transparent"
                android:stateListAnimator="@null"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>